--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <header>
-        <nav class="inicio">
-            <ul class="cabecalho">
-                <li><a href=""><p class="titulo">beuty<span class="titulo-verde">salon</span>.</p></a></li>
-                <li><a href=""></a><span class="icon-menu"></span></a></li>
-            </ul>
+    <header id="header" class="scroll">
+        <nav class="container">
+            <a href="#" class="logo"><h2 class="estilo">beauty<span class="logoCor">salon</span>.</h2></a>
+            <!-- Menu Desktop-->
+            <!-- Menu Mobile -->
+            <div class="toggle icon-menu"></div>
+            <div class="toggle icon-close"></div>
         </nav>
     </header>
-    <div class="sobre">
-        
-    </div>
 </body>
 </html>
