--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--fonts poppins-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <!--fonts DM sans-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@400;500;700&display=swap" rel="stylesheet">
     <!--Icomoon-->
     <link rel="stylesheet" href="./assets/css/icomoons.css">
     <!--CSS-->
@@ -19,5 +27,16 @@
             <div class="toggle icon-close"></div>
         </nav>
     </header>
+    <div class="inicio">
+        <div class="imagem">
+            <div class="quadrado"></div>
+            <img src="./assets/img/salão.png" alt="salão" class="salão">
+        </div>
+        <div class="apresentacao">
+            <h1 class="titulo" >Saúde natural<br> para os seus cabelos</h1>
+            <p class="texto">Um salão exclusivo em São Paulo,<br> especializado em tratamentos naturais.</p>
+            <button class="agendamento">Agendar um horário</button>
+        </div>
+    </div>
 </body>
 </html>
