--- a/index.html
+++ b/index.html
@@ -20,23 +20,31 @@
 <body>
     <header id="header" class="scroll">
         <nav class="container">
-            <a href="#" class="logo"><h2 class="estilo">beauty<span class="logoCor">salon</span>.</h2></a>
+            <a href="#"><h2>beauty<span>salon</span>.</h2></a>
             <!-- Menu Desktop-->
             <!-- Menu Mobile -->
             <div class="toggle icon-menu"></div>
             <div class="toggle icon-close"></div>
         </nav>
     </header>
-    <div class="inicio">
-        <div class="imagem">
-            <div class="quadrado"></div>
-            <img src="./assets/img/salão.png" alt="salão" class="salão">
-        </div>
-        <div class="apresentacao">
-            <h1 class="titulo" >Saúde natural<br> para os seus cabelos</h1>
-            <p class="texto">Um salão exclusivo em São Paulo,<br> especializado em tratamentos naturais.</p>
-            <button class="agendamento">Agendar um horário</button>
-        </div>
-    </div>
+    <main>
+        <section class="inicio">
+            <div class="imagem-secador">
+                <div class="quadrado"></div>
+                <img src="./assets/img/salão.png" alt="salão">
+            </div>
+            <div class="apresentacao">
+                <h1>Saúde natural para<br> os seus cabelos</h1>
+                <p>Um salão exclusivo em São Paulo,<br> especializado em tratamentos naturais.</p>
+                <button>Agendar um horário</button>
+            </div>
+        </section>
+        <section class="sobre">
+            <div class="imagem">
+                <div class="quadrado"></div>
+                <img src="./assets/img/equipe.png" alt="equipe">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
