--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
     <!--fonts DM sans-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="">
     <!--Icomoon-->
     <link rel="stylesheet" href="./assets/css/icomoons.css">
     <!--CSS-->
@@ -40,9 +38,15 @@
             </div>
         </section>
         <section class="sobre">
-            <div class="imagem">
+            <div class="imagem-equipe">
                 <div class="quadrado"></div>
                 <img src="./assets/img/equipe.png" alt="equipe">
+            </div>
+            <div class="nos">
+                <h1>Sobre nós</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sagittis arcu quis nisi luctus, id accumsan felis tristique. Proin quis bibendum diam. Sed consequat nisl laoreet eros ultricies pellentesque. Nullam in est porta, pellentesque massa vitae, vehicula risus.</p> 
+                <p>In placerat, felis vitae sodales dictum, lacus quam pretium mi, ut pretium urna turpis eu dui. Vestibulum id ullamcorper nibh. Donec luctus, nunc finibus elementum suscipit, tortor augue vulputate sapien, vitae feugiat enim augue sed.</p>
+                <p>Quisque id aliquam elit. Suspendisse congue pharetra maximus. Duis rutrum velit a leo euismod dictum. Sed sodales est efficitur arcu tincidunt tincidunt. Curabitur fringilla, risus at feugiat feugiat, nisl nulla tincidunt tellus, elementum elementum lorem nisl eleifend dolor. Nullam eget dui at sem ullamcorper luctus.</p>
             </div>
         </section>
     </main>
