--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--fonts DM+Sans-->
     <!--fonts poppins-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <!--fonts DM sans-->
-    <link rel="stylesheet" href="">
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+        rel="stylesheet"
+    >
     <!--Icomoon-->
     <link rel="stylesheet" href="./assets/css/icomoons.css">
     <!--CSS-->
@@ -37,6 +37,7 @@
                 <button>Agendar um horário</button>
             </div>
         </section>
+        <div class="direita"></div>
         <section class="sobre">
             <div class="imagem-equipe">
                 <div class="quadrado"></div>
@@ -49,6 +50,32 @@
                 <p>Quisque id aliquam elit. Suspendisse congue pharetra maximus. Duis rutrum velit a leo euismod dictum. Sed sodales est efficitur arcu tincidunt tincidunt. Curabitur fringilla, risus at feugiat feugiat, nisl nulla tincidunt tellus, elementum elementum lorem nisl eleifend dolor. Nullam eget dui at sem ullamcorper luctus.</p>
             </div>
         </section>
+        <div class="direita"></div>
+        <section class="servicos">
+            <div class="trabalhos">
+                <h1>Serviços</h1>
+                <p>Com mais de 10 anos no mercado, o <span>Beautysalon</span> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
+            </div>
+            <div class="quadrados">
+                <div class="quadrado">
+                    <div class="icon icon-woman-hair"></div>
+                    <h2>Terapia capilar</h2>
+                    <p>Terapia completa para couro cabeludo e fios, protegendo todos os tipos de cabelos, inclusive os longos e finos.</p>
+                </div>
+                <div class="quadrado">
+                    <div class="icon icon-trim"></div>
+                    <h2>Cortes</h2>
+                    <p>A nossa equipe é repleta de profissionais renomados, famosos por lançarem tendências com cortes diferenciados e clássicos.</p>
+                </div>
+                <div class="quadrado">
+                    <div class="icon icon-cosmetic"></div>
+                    <h2>Tratamentos</h2>
+                    <p>O beautysalon conta com diversos tratamentos naturais e totalmente veganos, para qualquer tipo <br> 
+                    de cabelo.</p>
+                </div>
+            </div>
+        </section>
+        <div class="direita"></div>
     </main>
 </body>
 </html>
