--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                 <p>Um salão exclusivo em São Paulo,<br> especializado em tratamentos naturais.</p>
                 <button>Agendar um horário</button>
             </div>
+            <div class="direita"></div>
         </section>
-        <div class="direita"></div>
+
         <section class="sobre">
             <div class="imagem-equipe">
                 <div class="quadrado"></div>
@@ -49,8 +50,8 @@
                 <p>In placerat, felis vitae sodales dictum, lacus quam pretium mi, ut pretium urna turpis eu dui. Vestibulum id ullamcorper nibh. Donec luctus, nunc finibus elementum suscipit, tortor augue vulputate sapien, vitae feugiat enim augue sed.</p>
                 <p>Quisque id aliquam elit. Suspendisse congue pharetra maximus. Duis rutrum velit a leo euismod dictum. Sed sodales est efficitur arcu tincidunt tincidunt. Curabitur fringilla, risus at feugiat feugiat, nisl nulla tincidunt tellus, elementum elementum lorem nisl eleifend dolor. Nullam eget dui at sem ullamcorper luctus.</p>
             </div>
+            <div class="esquerda"></div>
         </section>
-        <div class="direita"></div>
         <section class="servicos">
             <div class="trabalhos">
                 <h1>Serviços</h1>
@@ -67,15 +68,20 @@
                     <h2>Cortes</h2>
                     <p>A nossa equipe é repleta de profissionais renomados, famosos por lançarem tendências com cortes diferenciados e clássicos.</p>
                 </div>
-                <div class="quadrado">
+                <div class="quadrado ">
                     <div class="icon icon-cosmetic"></div>
                     <h2>Tratamentos</h2>
                     <p>O beautysalon conta com diversos tratamentos naturais e totalmente veganos, para qualquer tipo <br> 
                     de cabelo.</p>
                 </div>
             </div>
+            <div class="direita"></div>
         </section>
-        <div class="direita"></div>
+        <section class="depoimentos">
+            <div class="feedback">
+            <h1>Depoimentos de quem já passou por aqui</h1>
+            </div>
+        </section>
     </main>
 </body>
 </html>
