--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                     <h2>Cortes</h2>
                     <p>A nossa equipe é repleta de profissionais renomados, famosos por lançarem tendências com cortes diferenciados e clássicos.</p>
                 </div>
-                <div class="quadrado ">
+                <div class="quadrado espacado">
                     <div class="icon icon-cosmetic"></div>
-                    <h2>Tratamentos</h2>
-                    <p>O beautysalon conta com diversos tratamentos naturais e totalmente veganos, para qualquer tipo <br> 
+                        <h2>Tratamentos</h2>
+                        <p>O beautysalon conta com diversos tratamentos naturais e totalmente veganos, para qualquer tipo <br> 
                     de cabelo.</p>
                 </div>
             </div>
@@ -79,7 +79,18 @@
         </section>
         <section class="depoimentos">
             <div class="feedback">
-            <h1>Depoimentos de quem já passou por aqui</h1>
+                <h1>Depoimentos de quem já passou por aqui</h1>
+            </div>
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="card">
+                            <div class="text">
+                                <p><span>“</span>Eu sou cliente do Beautysalon há 5 anos e não troco por nada! Certamente meu cabelo mudou muito depois que comecei a tratar somente com produtos naturais e veganos. São profissionais incríveis e qualificados.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
