--- a/index.html
+++ b/index.html
@@ -1,98 +1,193 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--fonts DM+Sans-->
     <!--fonts poppins-->
     <link
-        href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
-        rel="stylesheet"
-    >
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <!--Icomoon-->
-    <link rel="stylesheet" href="./assets/css/icomoons.css">
+    <link rel="stylesheet" href="./assets/css/icomoons.css" />
     <!--CSS-->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Landing Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <header id="header" class="scroll">
-        <nav class="container">
-            <a href="#"><h2>beauty<span>salon</span>.</h2></a>
-            <!-- Menu Desktop-->
-            <!-- Menu Mobile -->
-            <div class="toggle icon-menu"></div>
-            <div class="toggle icon-close"></div>
-        </nav>
+      <nav class="container">
+        <a href="#"><h2>beauty<span>salon</span>.</h2></a>
+        <!-- Menu Desktop-->
+        <!-- Menu Mobile -->
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
+      </nav>
     </header>
     <main>
-        <section class="inicio">
-            <div class="imagem-secador">
-                <div class="quadrado"></div>
-                <img src="./assets/img/salão.png" alt="salão">
-            </div>
-            <div class="apresentacao">
-                <h1>Saúde natural para<br> os seus cabelos</h1>
-                <p>Um salão exclusivo em São Paulo,<br> especializado em tratamentos naturais.</p>
-                <button>Agendar um horário</button>
-            </div>
-            <div class="direita"></div>
-        </section>
+      <section class="inicio">
+        <div class="imagem-secador">
+          <div class="quadrado"></div>
+          <img src="./assets/img/salão.png" alt="salão" />
+        </div>
+        <div class="apresentacao">
+          <h1>
+            Saúde natural para<br />
+            os seus cabelos
+          </h1>
+          <p>
+            Um salão exclusivo em São Paulo,<br />
+            especializado em tratamentos naturais.
+          </p>
+          <button>Agendar um horário</button>
+        </div>
+        <div class="direita"></div>
+      </section>
 
-        <section class="sobre">
-            <div class="imagem-equipe">
-                <div class="quadrado"></div>
-                <img src="./assets/img/equipe.png" alt="equipe">
-            </div>
-            <div class="nos">
-                <h1>Sobre nós</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sagittis arcu quis nisi luctus, id accumsan felis tristique. Proin quis bibendum diam. Sed consequat nisl laoreet eros ultricies pellentesque. Nullam in est porta, pellentesque massa vitae, vehicula risus.</p> 
-                <p>In placerat, felis vitae sodales dictum, lacus quam pretium mi, ut pretium urna turpis eu dui. Vestibulum id ullamcorper nibh. Donec luctus, nunc finibus elementum suscipit, tortor augue vulputate sapien, vitae feugiat enim augue sed.</p>
-                <p>Quisque id aliquam elit. Suspendisse congue pharetra maximus. Duis rutrum velit a leo euismod dictum. Sed sodales est efficitur arcu tincidunt tincidunt. Curabitur fringilla, risus at feugiat feugiat, nisl nulla tincidunt tellus, elementum elementum lorem nisl eleifend dolor. Nullam eget dui at sem ullamcorper luctus.</p>
-            </div>
-            <div class="esquerda"></div>
-        </section>
-        <section class="servicos">
-            <div class="trabalhos">
-                <h1>Serviços</h1>
-                <p>Com mais de 10 anos no mercado, o <span>Beautysalon</span> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
-            </div>
-            <div class="quadrados">
-                <div class="quadrado">
-                    <div class="icon icon-woman-hair"></div>
-                    <h2>Terapia capilar</h2>
-                    <p>Terapia completa para couro cabeludo e fios, protegendo todos os tipos de cabelos, inclusive os longos e finos.</p>
+      <section class="sobre">
+        <div class="imagem-equipe">
+          <div class="quadrado"></div>
+          <img src="./assets/img/equipe.png" alt="equipe" />
+        </div>
+        <div class="nos">
+          <h1>Sobre nós</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+            sagittis arcu quis nisi luctus, id accumsan felis tristique. Proin
+            quis bibendum diam. Sed consequat nisl laoreet eros ultricies
+            pellentesque. Nullam in est porta, pellentesque massa vitae,
+            vehicula risus.
+          </p>
+          <p>
+            In placerat, felis vitae sodales dictum, lacus quam pretium mi, ut
+            pretium urna turpis eu dui. Vestibulum id ullamcorper nibh. Donec
+            luctus, nunc finibus elementum suscipit, tortor augue vulputate
+            sapien, vitae feugiat enim augue sed.
+          </p>
+          <p>
+            Quisque id aliquam elit. Suspendisse congue pharetra maximus. Duis
+            rutrum velit a leo euismod dictum. Sed sodales est efficitur arcu
+            tincidunt tincidunt. Curabitur fringilla, risus at feugiat feugiat,
+            nisl nulla tincidunt tellus, elementum elementum lorem nisl eleifend
+            dolor. Nullam eget dui at sem ullamcorper luctus.
+          </p>
+        </div>
+        <div class="esquerda"></div>
+      </section>
+      <section class="servicos">
+        <div class="trabalhos">
+          <h1>Serviços</h1>
+          <p>
+            Com mais de 10 anos no mercado, o <span>Beautysalon</span> já
+            conquistou clientes de inúmeros países com seus tratamentos
+            exclusivos e totalmente naturais
+          </p>
+        </div>
+        <div class="quadrados">
+          <div class="quadrado">
+            <div class="icon icon-woman-hair"></div>
+            <h2>Terapia capilar</h2>
+            <p>
+              Terapia completa para couro cabeludo e fios, protegendo todos os
+              tipos de cabelos, inclusive os longos e finos.
+            </p>
+          </div>
+          <div class="quadrado">
+            <div class="icon icon-trim"></div>
+            <h2>Cortes</h2>
+            <p>
+              A nossa equipe é repleta de profissionais renomados, famosos por
+              lançarem tendências com cortes diferenciados e clássicos.
+            </p>
+          </div>
+          <div class="quadrado espacado">
+            <div class="icon icon-cosmetic"></div>
+            <h2>Tratamentos</h2>
+            <p>
+              O beautysalon conta com diversos tratamentos naturais e totalmente
+              veganos, para qualquer tipo <br />
+              de cabelo.
+            </p>
+          </div>
+        </div>
+        <div class="direita"></div>
+      </section>
+      <section class="depoimentos">
+        <div class="feedback">
+          <h1>Depoimentos de quem já passou por aqui</h1>
+        </div>
+        <div class="swiper mySwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="card">
+                <div class="text">
+                  <p>
+                    <span>“</span>Eu sou cliente do Beautysalon há 5 anos e não
+                    troco por nada! Certamente meu cabelo mudou muito depois que
+                    comecei a tratar somente com produtos naturais e veganos.
+                    São profissionais incríveis e qualificados.
+                  </p>
                 </div>
-                <div class="quadrado">
-                    <div class="icon icon-trim"></div>
-                    <h2>Cortes</h2>
-                    <p>A nossa equipe é repleta de profissionais renomados, famosos por lançarem tendências com cortes diferenciados e clássicos.</p>
+                <div class="footer">
+                  <img src="./assets/img/user.png" alt="User image" />
+                  <p>Wanessa Souza</p>
                 </div>
-                <div class="quadrado espacado">
-                    <div class="icon icon-cosmetic"></div>
-                        <h2>Tratamentos</h2>
-                        <p>O beautysalon conta com diversos tratamentos naturais e totalmente veganos, para qualquer tipo <br> 
-                    de cabelo.</p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card">
+                <div class="text">
+                  <p>
+                    <span>“</span>Eu sou cliente do Beautysalon há 5 anos e não
+                    troco por nada! Certamente meu cabelo mudou muito depois que
+                    comecei a tratar somente com produtos naturais e veganos.
+                    São profissionais incríveis e qualificados.
+                  </p>
                 </div>
-            </div>
-            <div class="direita"></div>
-        </section>
-        <section class="depoimentos">
-            <div class="feedback">
-                <h1>Depoimentos de quem já passou por aqui</h1>
-            </div>
-            <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="card">
-                            <div class="text">
-                                <p><span>“</span>Eu sou cliente do Beautysalon há 5 anos e não troco por nada! Certamente meu cabelo mudou muito depois que comecei a tratar somente com produtos naturais e veganos. São profissionais incríveis e qualificados.</p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="footer">
+                  <img src="./assets/img/user.png" alt="User image" />
+                  <p>Wanessa Souza</p>
                 </div>
+              </div>
             </div>
-        </section>
+            <div class="swiper-slide">
+              <div class="card">
+                <div class="text">
+                  <p>
+                    <span>“</span>Eu sou cliente do Beautysalon há 5 anos e não
+                    troco por nada! Certamente meu cabelo mudou muito depois que
+                    comecei a tratar somente com produtos naturais e veganos.
+                    São profissionais incríveis e qualificados.
+                  </p>
+                </div>
+                <div class="footer">
+                  <img src="./assets/img/user.png" alt="User image" />
+                  <p>Wanessa Souza</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="esquerda"></div>
+      </section>
+      <section class="contato">
+        <h1>Entre em contato com a gente!</h1>
+        <p>
+          Entre em contato com a Beautysalon, queremos tirar suas dúvidas, ouvir
+          suas críticas e sugestões.
+        </p>
+        <button>
+          <span class="icon-whatsapp"></span>
+          <p>Entrar em contato</p>
+        </button>
+        <div class="contatos">
+          <div class="telefone">
+            <span class="icon-phone"></span>
+            <p>11 99845-6754</p>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
