--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <!--Icomoon-->
+    <link rel="stylesheet" href="./assets/css/icomoon.css" />
     <link rel="stylesheet" href="./assets/css/icomoons.css" />
     <!--CSS-->
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -183,11 +184,25 @@
         </button>
         <div class="contatos">
           <div class="telefone">
-            <span class="icon-phone"></span>
+            <span class="icon-whatsapp"></span>
             <p>11 99845-6754</p>
+          </div>
+          <div class="localization">
+            <span class="icon-map-pin"></span>
+            <p>R. Amauri Souza, 346</p>
+          </div>
+          <div class="email">
+            <span class="icon-mail"></span>
+            <p>contato@beautysalon.com</p>
           </div>
         </div>
       </section>
     </main>
+    <footer>
+      <h3>beauty<span>salon</span>.</h3>
+      <p>
+        &copy;2021 Beautysalon.<br />
+        Todos os direitos reservados.</p>
+    </footer>
   </body>
 </html>
