--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
       <nav class="container">
         <a href="#"><h2>beauty<span>salon</span>.</h2></a>
         <!-- Menu Desktop-->
+        <div class="menu">
+          <ul>
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Sobre</a></li>
+            <li><a href="">Serviços</a></li>
+            <li><a href="">Depoimentos</a></li>
+            <li><a href="">Contato</a></li>
+          </ul>
+        </div>
         <!-- Menu Mobile -->
         <div class="toggle icon-menu"></div>
         <div class="toggle icon-close"></div>
@@ -202,7 +211,13 @@
       <h3>beauty<span>salon</span>.</h3>
       <p>
         &copy;2021 Beautysalon.<br />
-        Todos os direitos reservados.</p>
+        Todos os direitos reservados.
+      </p>
+      <section class="rede-social">
+        <span class="icon-instagram"></span>
+        <span class="icon-facebook"></span>
+        <span class="icon-youtube"></span>
+      </section>
     </footer>
   </body>
 </html>
