--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="apresentacao">
           <h1>
-            Saúde natural para<br/>
+            Saúde natural para<br />
             os seus cabelos
           </h1>
           <p>
@@ -52,9 +52,8 @@
           </p>
           <button>Agendar um horário</button>
         </div>
-        <div class="direita"></div>
       </section>
-
+      <div class="direita"></div>
       <section class="sobre">
         <div class="imagem-equipe">
           <div class="quadrado"></div>
@@ -83,9 +82,8 @@
             dolor. Nullam eget dui at sem ullamcorper luctus.
           </p>
         </div>
-        <div class="esquerda"></div>
       </section>
-
+      <div class="esquerda"></div>
       <section class="servicos">
         <div class="trabalhos">
           <h1>Serviços</h1>
@@ -122,9 +120,8 @@
             </p>
           </div>
         </div>
-        <div class="direita"></div>
       </section>
-
+      <div class="direita"></div>
       <section class="depoimentos">
         <div class="feedback">
           <h1>Depoimentos de quem já passou por aqui</h1>
@@ -181,10 +178,10 @@
             </div>
           </div>
         </div>
-        <div class="esquerda"></div>
       </section>
-
+      <div class="esquerda"></div>
       <section class="contato">
+        <div class="text">
         <h1>Entre em contato com a gente!</h1>
         <p>
           Entre em contato com a Beautysalon, queremos tirar suas dúvidas, ouvir
@@ -194,6 +191,7 @@
           <span class="icon-whatsapp"></span>
           <p>Entrar em contato</p>
         </button>
+        </div>
         <div class="contatos">
           <div class="telefone">
             <span class="icon-whatsapp"></span>
@@ -212,11 +210,13 @@
     </main>
 
     <footer>
+      <div class="text">
       <h3>beauty<span>salon</span>.</h3>
       <p>
-        &copy;2021 Beautysalon.<br />
+        &copy;2021 Beautysalon.<br/>
         Todos os direitos reservados.
       </p>
+      </div>
       <section class="rede-social">
         <span class="icon-instagram"></span>
         <span class="icon-facebook"></span>
