--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
         </div>
         <!-- Menu Mobile -->
         <div class="toggle icon-menu"></div>
-        <div class="toggle icon-close"></div>
+        <div class="menu-mobile">
+            <div class="toggle icon-close"></div>
+          <ul>
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Sobre</a></li>
+            <li><a href="">Serviços</a></li>
+            <li><a href="">Depoimentos</a></li>
+            <li><a href="">Contato</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
     <main>
@@ -182,15 +191,15 @@
       <div class="esquerda"></div>
       <section class="contato">
         <div class="text">
-        <h1>Entre em contato com a gente!</h1>
-        <p>
-          Entre em contato com a Beautysalon, queremos tirar suas dúvidas, ouvir
-          suas críticas e sugestões.
-        </p>
-        <button>
-          <span class="icon-whatsapp"></span>
-          <p>Entrar em contato</p>
-        </button>
+          <h1>Entre em contato com a gente!</h1>
+          <p>
+            Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
+            ouvir suas críticas e sugestões.
+          </p>
+          <button>
+            <span class="icon-whatsapp"></span>
+            <p>Entrar em contato</p>
+          </button>
         </div>
         <div class="contatos">
           <div class="telefone">
@@ -211,11 +220,11 @@
 
     <footer>
       <div class="text">
-      <h3>beauty<span>salon</span>.</h3>
-      <p>
-        &copy;2021 Beautysalon.<br/>
-        Todos os direitos reservados.
-      </p>
+        <h3>beauty<span>salon</span>.</h3>
+        <p>
+          &copy;2021 Beautysalon.<br />
+          Todos os direitos reservados.
+        </p>
       </div>
       <section class="rede-social">
         <span class="icon-instagram"></span>
