--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
         <!-- Menu Desktop-->
         <div class="menu">
           <ul>
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Serviços</a></li>
-            <li><a href="">Depoimentos</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#servicos">Serviços</a></li>
+            <li><a href="#depoimentos">Depoimentos</a></li>
+            <li><a href="#contato">Contato</a></li>
           </ul>
         </div>
         <!-- Menu Mobile -->
-        <div class="toggle icon-menu"></div>
-        <div class="menu-mobile">
+        <div class="toggle icon-menu" id="icon-menu"></div>
+        <div class="menu-mobile" id="menu-mobile">
             <div class="toggle icon-close"></div>
           <ul>
-            <li><a href="">Inicio</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Serviços</a></li>
-            <li><a href="">Depoimentos</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#servicos">Serviços</a></li>
+            <li><a href="#depoimentos">Depoimentos</a></li>
+            <li><a href="#contato">Contato</a></li>
           </ul>
         </div>
       </nav>
     </header>
     <main>
-      <section class="inicio">
+      <section class="inicio" id="inicio">
         <div class="imagem-secador">
           <div class="quadrado"></div>
           <img src="./assets/img/salão.png" alt="salão" />
@@ -63,7 +63,7 @@
         </div>
       </section>
       <div class="direita"></div>
-      <section class="sobre">
+      <section class="sobre" id="sobre">
         <div class="imagem-equipe">
           <div class="quadrado"></div>
           <img src="./assets/img/equipe.png" alt="equipe" />
@@ -93,7 +93,7 @@
         </div>
       </section>
       <div class="esquerda"></div>
-      <section class="servicos">
+      <section class="servicos" id="servicos">
         <div class="trabalhos">
           <h1>Serviços</h1>
           <p>
@@ -131,7 +131,7 @@
         </div>
       </section>
       <div class="direita"></div>
-      <section class="depoimentos">
+      <section class="depoimentos" id="depoimentos">
         <div class="feedback">
           <h1>Depoimentos de quem já passou por aqui</h1>
         </div>
@@ -189,7 +189,7 @@
         </div>
       </section>
       <div class="esquerda"></div>
-      <section class="contato">
+      <section class="contato" id="contato">
         <div class="text">
           <h1>Entre em contato com a gente!</h1>
           <p>
@@ -232,5 +232,6 @@
         <span class="icon-youtube"></span>
       </section>
     </footer>
+    <script src="./assets/js/script.js" defer></script>
   </body>
 </html>
