--- a/index.html
+++ b/index.html
@@ -185,6 +185,13 @@
                 </div>
               </div>
             </div>
+            <div class="toggle">
+              <div class="toggle-ball">
+                <div class="ball"></div>
+                <div class="ball"></div>
+                <div class="ball"></div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
