--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <p>11 99845-6754</p>
           </div>
           <div class="localization">
-            <span class="icon-map-pin"></span>
+            <span class="icon-map-pin" onclick="window.location.href='https://www.google.com.br/maps/search/+R.+Amauri+Souza,+346?entry=ttu&g_ep=EgoyMDI1MDcyMC4wIKXMDSoASAFQAw%3D%3D'"></span>
             <p>R. Amauri Souza, 346</p>
           </div>
           <div class="email">
@@ -234,9 +234,9 @@
         </p>
       </div>
       <section class="rede-social">
-        <span class="icon-instagram"></span>
-        <span class="icon-facebook"></span>
-        <span class="icon-youtube"></span>
+        <span class="icon-instagram" onclick="window.location.href='https://instagram.com'"></span>
+        <span class="icon-facebook" onclick="window.location.href='https://facebook.com'"></span>
+        <span class="icon-youtube" onclick="window.location.href='https://youtube.com'"></span>
       </section>
     </footer>
     <script src="./assets/js/script.js" defer></script>
