--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="testimonials swiper-slide">
               <div class="card">
                 <div class="text">
                   <p>
@@ -169,7 +169,7 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="testimonials swiper-slide">
               <div class="card">
                 <div class="text">
                   <p>
@@ -183,16 +183,10 @@
                   <img src="./assets/img/user.png" alt="User image" />
                   <p>Wanessa Souza</p>
                 </div>
-              </div>
-            </div>
-            <div class="toggle">
-              <div class="toggle-ball">
-                <div class="ball"></div>
-                <div class="ball"></div>
-                <div class="ball"></div>
               </div>
             </div>
           </div>
+          <div class="swiper-pagination"></div>
         </div>
       </section>
       <div class="esquerda"></div>
@@ -240,5 +234,8 @@
       </section>
     </footer>
     <script src="./assets/js/script.js" defer></script>
+    <!--Swiper-->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="./assets/js/swiper.js"></script>
   </body>
 </html>
